@startuml
namespace proxy {
    class Client << (S,Aquamarine) >> {
    }
    class Proxy << (S,Aquamarine) >> {
        - realService Service

        - checkAccess() 
        - operation() 

    }
    class Service << (S,Aquamarine) >> {
        - operation() 

    }
    interface ServiceInterface  {
        - operation() 

    }
}

"proxy.ServiceInterface" <|-- "proxy.Proxy"
"proxy.ServiceInterface" <|-- "proxy.Service"

@enduml
